KUBE/app2-eks-project/kube/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: eks-2

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: docker.io/achalpadol/nginx-go:latest

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: db-password
              mountPath: /run/secrets
              readOnly: true

      volumes:
        - name: db-password
          secret:
            secretName: db-secret
