KUBE/app2-eks-project/kube/db-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: eks-2
spec:
  replicas: 1

  selector:
    matchLabels:
      app: db

  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: db
          image: mariadb:10-focal

          ports:
            - containerPort: 3306
