KUBE/app2-eks-project/kube/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: eks-2
spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: docker.io/achalpadol/nginx-go-frontend:v1

          ports:
            - containerPort: 80
