KUBE/app2-eks-project/kube/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: eks-2
spec:
  selector:
    app: db

  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306

  type: ClusterIP
